--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ nav li{
     width: 123px;
     height: 44px;
     margin-top: 41px;
+    margin-left: 280px;
     padding: 10px 24px;
     border-radius: 15px;
     background: #E02C6D;
@@ -216,7 +217,7 @@ All Players Datalies Section Start
 
 .footer img{
     margin-top: 158px;
-    margin-left: 475px;
+    margin-left: 575px;
     margin-right: 475px;
     width: 350px;
     height: 110;
@@ -226,45 +227,89 @@ footer p{
     font-family: 'Poppins', sans-serif;
 
 }
-.icon-setup{
+ .icon-setup{
     display: flex;
     flex-direction: row;
     justify-content: center;
-}
+} 
 .intagram{
     padding: 14px;
     margin: 15px;
     background: #0B0D17;
-    opacity: 0.1;
-    width: 50px;
-    height: 50px;
-    border-radius: 50px;
+    opacity: 0.4;
+    width: 20px;
+    height: 20px;
+    border-radius: 25px;
     
+    
+}
+.fa-instagram{
+    color: white;
+    justify-content: center;
+    padding-left: 3px;
 }
 .dribbble{
     padding: 14px;
     margin: 15px;
     background: #0B0D17;
-    opacity: 0.1;
-    width: 50px;
-    height: 50px;
-    border-radius: 50px;
+    opacity: 0.4;
+    width: 20px;
+    height: 20px;
+    border-radius: 25px;
 }
+.fa-dribbble{
+    color: white;
+    justify-content: center;
+    padding-left: 3px;
+}
+
 .twitter{
     padding: 14px;
     margin: 15px;
     background: #0B0D17;
-    opacity: 0.1;
-    width: 50px;
-    height: 50px;
-    border-radius: 50px;
+    opacity: 0.4;
+    width: 20px;
+    height: 20px;
+    border-radius: 25px;
+}
+.fa-twitter{
+    color: white;
+    justify-content: center;
+    padding-left: 3px;
 }
 .youtube{
     padding: 14px;
     margin: 15px;
     background: #0B0D17;
-    opacity: 0.1;
-    width: 50px;
-    height: 50px;
-    border-radius: 50px;
+    opacity: 0.4;
+    width: 20px;
+    height: 20px;
+    border-radius: 25px;
+    
 }
+.fa-youtube{
+    color: white;
+    justify-content: center;
+    padding-left: 3px;
+    
+    
+}
+
+
+/* -------------------
+Media Querise
+-------------------- */
+/* --------------------Mobail device--------------- */
+
+@media only screen and (max-width:688px) {
+    .container{
+        width: 100%;
+ }
+ .container, .menu-bar, .images-and-title-section, .blogs, .all-highlights, .footer{
+     grid-template-columns: repeat(1, 1fr);
+     
+ }
+    
+}
+
+    
